force-app/main/default/objects/SDOHDescription__c/SDOHDescription__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used to set the combination of Assessment Template, SDOH, Score to get SDOH description.</description>
    <label>RE_SDOHDescription</label>
</CustomObject>