force-app/main/default/objects/SDOHDescription__c/fields/Assessment_Template__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Template__c</fullName>
    <description>This field is use to store the Assessment Template</description>
    <label>Assessment Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>