force-app/main/default/objects/SDOHDescription__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This field is use to store the SDOH Descriptions</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>