force-app/main/default/objects/SDOHDescription__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>This field is use to store the Score of SDOH</description>
    <label>Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>