force-app/main/default/objects/SDOHDescription__c/fields/SDOH__c.field-meta.xml
<CustomField>
    <fullName>SDOH__c</fullName>
    <description>This field is use to store the SDOH Domains</description>
    <label>SDOH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>