force-app/main/default/objects/SDOHDescription__c/listViews/SDOH_Description.listView-meta.xml
<ListView>
    <fullName>SDOH_Description</fullName>
    <columns>NAME</columns>
    <columns>Assessment_Template__c</columns>
    <columns>Score__c</columns>
    <columns>SDOH__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>SDOH Description</label>
</ListView>